fixed CSS issue with advanced search menu covering the clear button in Chrome

--- a/fuel/modules/fuel/assets/css/fuel.css
+++ b/fuel/modules/fuel/assets/css/fuel.css
@@ -510,7 +510,8 @@ a#multi_delete { display: block; }
 .adv_search .label { width: 100px; }
 .adv_search input[type="text"] { max-width: 217px; }
 .search_input { position: relative; }
-.search_input #adv-search-btn { position: absolute; right: 5px; top: 5px; padding-top: 5px; height: 10px; }
+#search_term { padding-right: 15px; }
+.search_input #adv-search-btn { position: absolute; right: 4px; top: 5px; padding-top: 5px; height: 10px; }
 
 /* other items */
 div#other_items { float: left; margin: 2px 20px 0px 20px; }
